--- a/about.html
+++ b/about.html
@@ -214,7 +214,7 @@
     <!-- Team Start -->
     <div class="container-fluid py-6 px-5">
   <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-    <h1 class="display-5 mb-0">Our Team Members</h1>
+    <h1 class="display-5 mb-0">The Leader Behind Star Magnet</h1>
     <hr class="w-25 mx-auto bg-primary">
   </div>
 
@@ -222,75 +222,14 @@
   <div class="row justify-content-center mb-4">
     <div class="col-md-4">
       <div class="team-item position-relative overflow-hidden">
-        <img class="img-fluid w-100" src="img/team-1.jpeg" alt="">
-        <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
-          <h3 class="text-white">Tony Saji</h3>
-          <p class="text-white text-uppercase mb-0">Director</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Row 1: 3 Members -->
-  <div class="row g-4 mb-4">
-    <div class="col-lg-4">
-      <div class="team-item position-relative overflow-hidden">
         <img class="img-fluid w-100" src="img/team-2.jpeg" alt="">
         <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
           <h3 class="text-white">Jeena Tony</h3>
           <p class="text-white text-uppercase mb-0">Program Manager</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-4">
-      <div class="team-item position-relative overflow-hidden">
-        <img class="img-fluid w-100" src="img/team-3.jpeg" alt="">
-        <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
-          <h3 class="text-white">Sheeja Saji</h3>
-          <p class="text-white text-uppercase mb-0">Training Co-ordinator</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-4">
-      <div class="team-item position-relative overflow-hidden">
-        <img class="img-fluid w-100" src="img/team-4.jpeg" alt="">
-        <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
-          <h3 class="text-white">Megha Saji</h3>
-          <p class="text-white text-uppercase mb-0">Relationship Manager</p>
-        </div>
+        <!-- </div> -->
       </div>
     </div>
   </div>
-
-  <!-- Row 2: 3 Members -->
-  <div class="row g-4">
-    <div class="col-lg-4">
-      <div class="team-item position-relative overflow-hidden">
-        <img class="img-fluid w-100" src="img/team5.jpeg" alt="">
-        <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
-          <h3 class="text-white">Steny Francis</h3>
-          <p class="text-white text-uppercase mb-0">Operations Manager</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-4">
-      <div class="team-item position-relative overflow-hidden">
-        <img class="img-fluid w-100" src="img/team-6.jpeg" alt="">
-        <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
-          <h3 class="text-white">Hiba</h3>
-          <p class="text-white text-uppercase mb-0">Program Co-ordinator</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-4">
-      <div class="team-item position-relative overflow-hidden">
-        <img class="img-fluid w-100" src="img/team-7.jpeg" alt="">
-        <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
-          <h3 class="text-white">Nikitha</h3>
-          <p class="text-white text-uppercase mb-0">Mentor</p>
-        </div>
-      </div>
-    </div>
   </div>
 </div>
 
