--- a/service.html
+++ b/service.html
@@ -172,9 +172,53 @@
 
 
     <!-- Quote Start -->
-    <div class="container-fluid bg-secondary px-0">
+   <div class="container-fluid bg-secondary px-0">
     <div class="row g-0">
-        <!-- Left Column: Form -->
+
+        <!-- Left Column: How It Works Section -->
+        <div class="col-lg-6 bg-white px-5 py-6">
+            <h2 class="mb-4 gradient-text">How Our Program Works</h2>
+
+            <div class="d-flex mb-4">
+                <div class="me-3">
+                    <span class="badge bg-custom-gradient fs-5 rounded-circle px-3 py-2">1</span>
+                </div>
+                <div>
+                    <h5 class="mb-1">Book Your Slot</h5>
+                    <p class="mb-0">Fill the form to select your preferred date and service.</p>
+                </div>
+            </div>
+
+            <div class="d-flex mb-4">
+                <div class="me-3">
+                    <span class="badge bg-custom-gradient fs-5 rounded-circle px-3 py-2">2</span>
+                </div>
+                <div>
+                    <h5 class="mb-1">Get a Confirmation</h5>
+                    <p class="mb-0">We’ll get in touch via email or phone to confirm the booking.</p>
+                </div>
+            </div>
+
+            <div class="d-flex mb-5">
+                <div class="me-3">
+                    <span class="badge bg-custom-gradient fs-5 rounded-circle px-3 py-2">3</span>
+                </div>
+                <div>
+                    <h5 class="mb-1">Attend the Session</h5>
+                    <p class="mb-0">Join us and begin your journey to empowerment and growth.</p>
+                </div>
+            </div>
+
+            <!-- Optional Image or Illustration -->
+            <div class="text-center">
+                <video class="img-fluid rounded shadow-sm" style="max-height: 1000px;" autoplay muted playsinline loop>
+                    <source src="img/book-service.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+        </div>
+
+        <!-- Right Column: Form -->
         <div class="col-lg-6 py-6 px-5">
             <h1 class="display-5 mb-4">Book a Service</h1>
             <p class="mb-4">
@@ -248,62 +292,16 @@
                     <!-- Submit -->
                     <div class="col-12">
                         <button class="btn w-100 py-3 text-white border-0" style="background: linear-gradient(90deg, #28a745, #6de28b); color: #000; font-weight: 600;" type="submit">
-    Book a Service
-</button>
-
+                            Book a Service
+                        </button>
                     </div>
                 </div>
             </form>
         </div>
 
-        <!-- Right Column: Google Map -->
-       <!-- Right Column: How It Works Section -->
-<div class="col-lg-6 bg-white px-5 py-6">
-    <h2 class="mb-4 gradient-text">How Our Program Works</h2>
-
-    <div class="d-flex mb-4">
-        <div class="me-3">
-            <span class="badge bg-custom-gradient fs-5 rounded-circle px-3 py-2">1</span>
-        </div>
-        <div>
-            <h5 class="mb-1">Book Your Slot</h5>
-            <p class="mb-0">Fill the form to select your preferred date and service.</p>
-        </div>
-    </div>
-
-    <div class="d-flex mb-4">
-        <div class="me-3">
-            <span class="badge bg-custom-gradient fs-5 rounded-circle px-3 py-2">2</span>
-        </div>
-        <div>
-            <h5 class="mb-1">Get a Confirmation</h5>
-            <p class="mb-0">We’ll get in touch via email or phone to confirm the booking.</p>
-        </div>
-    </div>
-
-    <div class="d-flex mb-5">
-        <div class="me-3">
-            <span class="badge bg-custom-gradient fs-5 rounded-circle px-3 py-2">3</span>
-        </div>
-        <div>
-            <h5 class="mb-1">Attend the Session</h5>
-            <p class="mb-0">Join us and begin your journey to empowerment and growth.</p>
-        </div>
-    </div>
-
-    <!-- Optional Image or Illustration -->
-   <div class="text-center">
-    <video class="img-fluid rounded shadow-sm" style="max-height: 1000px;" autoplay muted playsinline loop>
-        <source src="img/book-service.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-</div>
-
-
-</div>
-
     </div>
 </div>
+
     <!-- Quote End -->
     
 
