--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
 
     <!-- Features Start -->
-   <div class="container-fluid py-6 px-5">
+<div class="container-fluid pt-6 pb-3 px-5">
     <div class="text-center mx-auto mb-5" style="max-width: 600px;">
         <h1 class="display-5 mb-0">Why Choose Us</h1>
         <hr class="w-25 mx-auto bg-primary">
@@ -315,27 +315,42 @@
     <div class="row g-5">
         <!-- Left Column -->
         <div class="col-lg-4">
-            <div class="row g-5">
+            <div class="row g-4">
                 <div class="col-12">
-                    <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
-                        <i class="fa fa-child fs-4 text-white"></i>
+                    <div class="d-flex align-items-start mb-2">
+                        <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center me-3"
+                            style="width: 60px; height: 60px; min-width: 60px;">
+                            <i class="fa fa-child fs-4 text-white"></i>
+                        </div>
+                        <div>
+                            <h5 class="mb-1">Child-Centered Approach</h5>
+                            <p class="mb-0">Every session is tailored to meet children's emotional, social, and developmental needs with care and expertise.</p>
+                        </div>
                     </div>
-                    <h3>Child-Centered Approach</h3>
-                    <p class="mb-0">Every session is tailored to meet children's emotional, social, and developmental needs with care and expertise.</p>
                 </div>
                 <div class="col-12">
-                    <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
-                        <i class="fa fa-lightbulb fs-4 text-white"></i>
+                    <div class="d-flex align-items-start mb-2">
+                        <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center me-3"
+                            style="width: 60px; height: 60px; min-width: 60px;">
+                            <i class="fa fa-lightbulb fs-4 text-white"></i>
+                        </div>
+                        <div>
+                            <h5 class="mb-1">Character-Based Curriculum</h5>
+                            <p class="mb-0">We focus on honesty, empathy, discipline, and self-awareness to build a strong foundation for lifelong success.</p>
+                        </div>
                     </div>
-                    <h3>Character-Based Curriculum</h3>
-                    <p class="mb-0">We focus on honesty, empathy, discipline, and self-awareness to build a strong foundation for lifelong success.</p>
                 </div>
                 <div class="col-12">
-                    <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
-                        <i class="fa fa-graduation-cap fs-4 text-white"></i>
+                    <div class="d-flex align-items-start mb-2">
+                        <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center me-3"
+                            style="width: 60px; height: 60px; min-width: 60px;">
+                            <i class="fa fa-graduation-cap fs-4 text-white"></i>
+                        </div>
+                        <div>
+                            <h5 class="mb-1">Experienced Mentors</h5>
+                            <p class="mb-0">Led by certified life coaches, educators, and child psychologists with a passion for real impact.</p>
+                        </div>
                     </div>
-                    <h3>Experienced Mentors</h3>
-                    <p class="mb-0">Led by certified life coaches, educators, and child psychologists with a passion for real impact.</p>
                 </div>
             </div>
         </div>
@@ -353,86 +368,52 @@
 
         <!-- Right Column -->
         <div class="col-lg-4">
-            <div class="row g-5">
+            <div class="row g-4">
                 <div class="col-12">
-                    <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
-                        <i class="far fa-smile-beam fs-4 text-white"></i>
+                    <div class="d-flex align-items-start mb-2">
+                        <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center me-3"
+                            style="width: 60px; height: 60px; min-width: 60px;">
+                            <i class="far fa-smile-beam fs-4 text-white"></i>
+                        </div>
+                        <div>
+                            <h5 class="mb-1">Trusted by Parents</h5>
+                            <p class="mb-0">Our programs are loved by families across Kerala for their real-world impact and child-friendly delivery.</p>
+                        </div>
                     </div>
-                    <h3>Trusted by Parents</h3>
-                    <p class="mb-0">Our programs are loved by families across Kerala for their real-world impact and child-friendly delivery.</p>
                 </div>
                 <div class="col-12">
-                    <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
-                        <i class="fa fa-user-tie fs-4 text-white"></i>
+                    <div class="d-flex align-items-start mb-2">
+                        <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center me-3"
+                            style="width: 60px; height: 60px; min-width: 60px;">
+                            <i class="fa fa-user-tie fs-4 text-white"></i>
+                        </div>
+                        <div>
+                            <h5 class="mb-1">Holistic Development</h5>
+                            <p class="mb-0">We go beyond academics—building emotional strength, leadership, communication, and values that last.</p>
+                        </div>
                     </div>
-                    <h3>Holistic Development</h3>
-                    <p class="mb-0">We go beyond academics—building emotional strength, leadership, communication, and values that last.</p>
                 </div>
                 <div class="col-12">
-                    <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
-                        <i class="fa fa-headset fs-4 text-white"></i>
+                    <div class="d-flex align-items-start mb-2">
+                        <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center me-3"
+                            style="width: 60px; height: 60px; min-width: 60px;">
+                            <i class="fa fa-headset fs-4 text-white"></i>
+                        </div>
+                        <div>
+                            <h5 class="mb-1">Ongoing Support</h5>
+                            <p class="mb-0">Our mentors stay connected with students through follow-ups, goal reviews, and personalized guidance.</p>
+                        </div>
                     </div>
-                    <h3>Ongoing Support</h3>
-                    <p class="mb-0">Our mentors stay connected with students through follow-ups, goal reviews, and personalized guidance.</p>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-    <!-- Features Start -->
-
-
-    <!-- Quote Start -->
-   <!-- book a service -->
+<!-- Features End -->
 
 
-<!-- book a service End -->
-
-    <!-- Quote End -->
-
-
-    <!-- Team Start -->
-    <!-- <div class="container-fluid py-6 px-5">
-        <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-            <h1 class="display-5 mb-0">Our Team Members</h1>
-            <hr class="w-25 mx-auto bg-primary">
-        </div>
-        <div class="row g-5">
-            <div class="col-lg-4">
-                <div class="team-item position-relative overflow-hidden">
-                    <img class="img-fluid w-100" src="img/team-1.jpeg" alt="">
-                    <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
-                        <h3 class="text-white">Tony Saji</h3>
-                        <p class="text-white text-uppercase mb-0">Director</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="team-item position-relative overflow-hidden">
-                    <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
-                    <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
-                        <h3 class="text-white">Full Name</h3>
-                        <p class="text-white text-uppercase mb-0">Designation</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="team-item position-relative overflow-hidden">
-                    <img class="img-fluid w-100" src="img/team-3.jpg" alt="">
-                    <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
-                        <h3 class="text-white">Full Name</h3>
-                        <p class="text-white text-uppercase mb-0">Designation</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
-    <!-- Team End -->
-
-
-    <!-- Testimonial Start -->
-   <div class="container-fluid bg-secondary p-0">
+<!-- Testimonial Start -->
+<div class="container-fluid bg-secondary p-0">
     <div class="row g-0">
         <!-- Image Section -->
         <div class="col-lg-6" style="min-height: 500px;">
@@ -442,7 +423,7 @@
         </div>
 
         <!-- Testimonial Content -->
-        <div class="col-lg-6 py-6 px-5">
+        <div class="col-lg-6 pt-0 pb-6 px-5">
             <h1 class="display-5 mb-4">What They Say About Star Magnet</h1>
             <div class="owl-carousel testimonial-carousel">
 
@@ -495,6 +476,8 @@
         </div>
     </div>
 </div>
+<!-- Testimonial End -->
+
 
 
 
