--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
                     ensures each child is seen, heard, and supported throughout the journey.
                     Through interactive workshops, real-life role play, goal-setting exercises, and
                     consistent mentorship</p>
-                <a href="" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Get A Quote</a>
+                <a href="contact.html" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Get A Quote</a>
             </div>
             <div class="col-lg-6">
   <div class="h-100 d-flex flex-column justify-content-center bg-primary p-5 text-white">
@@ -211,8 +211,8 @@
     <!-- About End -->
 
 
-    <!-- Team Start -->
-    <div class="container-fluid py-6 px-5">
+  <!-- Team Start -->
+<div class="container-fluid pt-6 pb-2 px-5">
   <div class="text-center mx-auto mb-5" style="max-width: 600px;">
     <h1 class="display-5 mb-0">The Leader Behind Star Magnet</h1>
     <hr class="w-25 mx-auto bg-primary">
@@ -226,32 +226,29 @@
         <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
           <h3 class="text-white">Jeena Tony</h3>
           <p class="text-white text-uppercase mb-0">Program Manager</p>
-        <!-- </div> -->
+        </div>
       </div>
     </div>
   </div>
+</div>
+<!-- Team End -->
+
+<!-- Footer Start -->
+<div class="container-fluid bg-primary text-secondary pt-3 pb-5 px-5">
+  <div class="row g-5">
+    <div class="col-12 text-center">
+      <h1 class="display-5 mb-4">Stay Update!!!</h1>
+      <form class="mx-auto" style="max-width: 600px;">
+        <div class="input-group">
+          <input type="text" class="form-control border-white p-3" placeholder="Your Email">
+          <button class="btn btn-dark px-4">Sign Up</button>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
+<!-- Footer End -->
 
-
-    
-    <!-- Team End -->
-    
-
-    <!-- Footer Start -->
-     <div class="container-fluid bg-primary text-secondary p-5">
-        <div class="row g-5">
-            <div class="col-12 text-center">
-                <h1 class="display-5 mb-4">Stay Update!!!</h1>
-                <form class="mx-auto" style="max-width: 600px;">
-                    <div class="input-group">
-                        <input type="text" class="form-control border-white p-3" placeholder="Your Email">
-                        <button class="btn btn-dark px-4">Sign Up</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
     <div class="container-fluid bg-dark text-secondary p-5">
         <div class="row g-5">
             <div class="col-lg-3 col-md-6">
