--- a/contact.html
+++ b/contact.html
@@ -138,6 +138,15 @@
                             Send Message
                         </button>
                     </div>
+                    <div class="col-12 mt-3 text-center">
+    <p class="mb-3">Or reach us instantly on:</p>
+    <a href="https://wa.me/919037762644" target="_blank" class="btn btn-success me-2">
+        <i class="fab fa-whatsapp me-1"></i> WhatsApp Enquiry
+    </a>
+    <a href="https://www.facebook.com/StepUpTony/?rdid=DnscsibP2vviSS0p" target="_blank" class="btn btn-primary">
+        <i class="fab fa-facebook-f me-1"></i> Facebook Message
+    </a>
+</div>
                 </div>
             </form>
         </div>
