--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
     <div class="row g-0">
         <!-- Left Column: Contact Form -->
         <div class="col-lg-6 py-6 px-5">
-            <h1 class="display-5 mb-4">Contact Us</h1>
+            <h1 class="display-5 mb-4">Reach Us Through</h1>
             <p class="mb-4">
                 Got questions or feedback? Reach out to <strong>Star Magnet</strong>—we’re here to support and guide you.
             </p>
