--- a/service.html
+++ b/service.html
@@ -115,55 +115,55 @@
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-secondary text-center px-5">
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                        <i class="fa fa-user-tie fa-2x"></i>
+                        <i class="fa fa-brain fa-2x me-2"></i>
                     </div>
-                    <h3 class="mb-3">Business Research</h3>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+                    <h3 class="mb-3">Build emotional intelligence</h3>
+                    <p class="mb-0">Our sessions help children recognize, understand, and manage their emotions—laying the foundation for empathy, resilience, and self-control.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-secondary text-center px-5">
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                        <i class="fa fa-chart-pie fa-2x"></i>
+                        <i class="fa fa-users fa-2x me-2"></i>
                     </div>
-                    <h3 class="mb-3">Stretagic Planning</h3>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+                    <h3 class="mb-3">Strengthen interpersonal skills</h3>
+                    <p class="mb-0">Through interactive role-plays and group tasks, children learn effective communication, teamwork, and relationship-building skills.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-secondary text-center px-5">
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                        <i class="fa fa-chart-line fa-2x"></i>
+                        <i class="fa fa-user-check fa-2x me-2"></i>
                     </div>
-                    <h3 class="mb-3">Market Analysis</h3>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+                    <h3 class="mb-3">Foster self-awareness and accountability</h3>
+                    <p class="mb-0">We guide children to reflect on their actions, set personal goals, and take ownership of their choices through structured self-evaluation.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-secondary text-center px-5">
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                        <i class="fa fa-chart-area fa-2x"></i>
+                        <i class="fa fa-mountain fa-2x me-2"></i>
                     </div>
-                    <h3 class="mb-3">Financial Analaysis</h3>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+                    <h3 class="mb-3">Handle challenges with confidence</h3>
+                    <p class="mb-0">Real-life simulations and guided mentoring help children face setbacks positively and build the courage to solve problems independently.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-secondary text-center px-5">
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                        <i class="fa fa-balance-scale fa-2x"></i>
+                        <i class="fa fa-sun fa-2x me-2"></i>
                     </div>
-                    <h3 class="mb-3">legal Advisory</h3>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+                    <h3 class="mb-3">Develop a positive and purposeful outlook</h3>
+                    <p class="mb-0">Our coaching encourages optimism, vision, and goal-oriented thinking—helping children see the bigger picture with hope and clarity.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-secondary text-center px-5">
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                        <i class="fa fa-house-damage fa-2x"></i>
+                        <i class="fa fa-handshake fa-2x me-2"></i>
                     </div>
-                    <h3 class="mb-3">Tax & Insurance</h3>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+                    <h3 class="mb-3">Nurture empathy and respectful communication</h3>
+                    <p class="mb-0">Children learn to listen actively, respect differences, and express themselves with kindness and clarity—essential for healthy relationships.</p>
                 </div>
             </div>
         </div>
@@ -249,11 +249,11 @@
                     </div>
 
                     <!-- Phone -->
-                    <div class="col-6">
-                      <div class="form-floating mb-3">
+                   <div class="col-6">
+                    <div class="form-floating mb-3">
                         <input type="tel" class="form-control" id="phone" name="Phone" placeholder="9876543210" required>
                         <label for="phone">Phone Number</label>
-                      </div>
+                    </div>
                     </div>
 
 
