--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
         <a href="index.html" class="navbar-brand p-0">
          <h1 class="m-0 text-uppercase gradient-text">STAR MAGNET</h1>
-            <p class="m-0 text-uppercase gradient-subtext">A Stepex Initiative</p>
+            <p class="m-0 text-uppercase gradient-subtext">A Stepx International Pvt Ltd Initiative</p>
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -102,8 +102,8 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="white-text text-uppercase">Youth Empowerment Program</h5>
                             <h1 class="display-1 white-text">Shaping Character, Inspiring Futures</h1>
-                            <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Get Quote</a>
-                            <a href="" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Contact Us</a>
+                            <a href="service.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Get Quote</a>
+                            <a href="contact.html" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -478,87 +478,63 @@
 </div>
 <!-- Testimonial End -->
 
+<!-- Biodata, Vision & Mission Section Start -->
+<div class="container-fluid py-6 bg-secondary">
+  <div class="container">
+    <div class="row align-items-start">
+      <!-- Image Section -->
+      <div class="col-lg-4 mb-4">
+        <div class="text-center">
+          <img src="img/jeena.jpeg" alt="Jeena Johnson" class="img-fluid rounded-circle border border-3 border-primary" style="width: 250px; height: 250px; object-fit: cover;">
+          <h4 class="mt-3 gradient-text">Jeena Johnson</h4>
+          <p class="text-muted">Registered Nurse & Head of Children Life Transformation</p>
+        </div>
+      </div>
 
+      <!-- Text Content Section -->
+      <div class="col-lg-8">
+        <h1 class="gradient-text text-uppercase mb-4">Meet Our Leader</h1>
 
+        <h4 class="mb-3">Professional Qualifications:</h4>
+        <ul>
+          <li>Registered Nurse – Licensed and practicing in healthcare services with a strong commitment to patient care.</li>
+          <li>CBT Training – Specialized in Cognitive Behavioral Therapy for mental health support and behavioral interventions.</li>
+          <li>NLP Training – Skilled in Neuro-Linguistic Programming to enhance communication and patient outcomes.</li>
+          <li>Child Psychology – Training focused on brain development, cognitive growth, and emotional well-being in children.</li>
+        </ul>
 
-   <!-- Blog Start -->
-<div class="container-fluid py-6 px-5">
-    <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-        <h1 class="display-5 mb-0">Latest Blog Posts</h1>
-        <hr class="w-25 mx-auto bg-primary">
+        <h4 class="mt-4">Leadership Role:</h4>
+        <ul>
+          <li>Head of Children Life Transformation – Leading programs to improve children's lives through therapy, care, and development.</li>
+        </ul>
+
+        <h4 class="mt-4">Summary:</h4>
+        <p>
+          Jeena Johnson is a compassionate and dedicated healthcare professional with multidisciplinary training in psychology, behavioral therapy, and child development. With a strong foundation in nursing and mental health, she serves in a leadership capacity to support and transform the lives of children through education, therapy, and care.
+        </p>
+
+        <h2 class="gradient-text mt-5 mb-3">🎯 Vision</h2>
+        <blockquote class="blockquote">
+          <p class="mb-0">"To ignite the potential of 1 million students across the world by nurturing life skills, self-confidence, and purpose-driven thinking—empowering a generation to rise as emotionally strong, socially responsible, and future-ready leaders of tomorrow."</p>
+        </blockquote>
+
+        <h2 class="gradient-text mt-5 mb-3">🛤️ Mission</h2>
+        <ul>
+          <li>To provide daily 30-minute transformational classes that focus on personal growth, emotional intelligence, academic mindset, and value-based life skills.</li>
+          <li>To support students from Class 5 to 12 through age-appropriate, interactive, and practical learning experiences in Malayalam and English.</li>
+          <li>To build a positive student community that encourages self-expression, teamwork, discipline, and goal-oriented thinking.</li>
+          <li>To bridge the gap between academic learning and real-life challenges, creating confident, kind, and visionary individuals.</li>
+          <li>To include parents and teachers in the transformation journey through periodic guidance and involvement modules.</li>
+        </ul>
+      </div>
     </div>
-    <div class="row g-5">
-        <!-- Blog Post 1 -->
-        <div class="col-lg-4">
-            <div class="blog-item">
-                <div class="position-relative overflow-hidden">
-                    <img class="img-fluid" src="img/blog-1.jpg" alt="Building Confidence in Children">
-                </div>
-                <div class="bg-secondary d-flex">
-                    <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
-                        <span>12</span>
-                        <h5 class="text-uppercase m-0">Jun</h5>
-                        <span>2025</span>
-                    </div>
-                    <div class="d-flex flex-column justify-content-center py-3 px-4">
-                        <div class="d-flex mb-2">
-                            <small class="text-uppercase me-3"><i class="bi bi-person me-2"></i>Admin</small>
-                            <small class="text-uppercase me-3"><i class="bi bi-bookmarks me-2"></i>Parenting</small>
-                        </div>
-                        <a class="h4" href="#">Building Confidence in Children: A Life Coach’s Guide</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Blog Post 2 -->
-        <div class="col-lg-4">
-            <div class="blog-item">
-                <div class="position-relative overflow-hidden">
-                    <img class="img-fluid" src="img/blog-2.jpg" alt="Emotional Intelligence for Students">
-                </div>
-                <div class="bg-secondary d-flex">
-                    <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
-                        <span>24</span>
-                        <h5 class="text-uppercase m-0">May</h5>
-                        <span>2025</span>
-                    </div>
-                    <div class="d-flex flex-column justify-content-center py-3 px-4">
-                        <div class="d-flex mb-2">
-                            <small class="text-uppercase me-3"><i class="bi bi-person me-2"></i>Coach Team</small>
-                            <small class="text-uppercase me-3"><i class="bi bi-bookmarks me-2"></i>Emotional Skills</small>
-                        </div>
-                        <a class="h4" href="#">Why Emotional Intelligence Matters More Than Marks</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Blog Post 3 -->
-        <div class="col-lg-4">
-            <div class="blog-item">
-                <div class="position-relative overflow-hidden">
-                    <img class="img-fluid" src="img/blog-3.jpg" alt="Role of Parents in Child Development">
-                </div>
-                <div class="bg-secondary d-flex">
-                    <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
-                        <span>08</span>
-                        <h5 class="text-uppercase m-0">May</h5>
-                        <span>2025</span>
-                    </div>
-                    <div class="d-flex flex-column justify-content-center py-3 px-4">
-                        <div class="d-flex mb-2">
-                            <small class="text-uppercase me-3"><i class="bi bi-person me-2"></i>Star Magnet</small>
-                            <small class="text-uppercase me-3"><i class="bi bi-bookmarks me-2"></i>Guidance</small>
-                        </div>
-                        <a class="h4" href="#">The Parent's Role in Shaping a Child’s Inner Strength</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+  </div>
 </div>
-<!-- Blog End -->
+<!-- Biodata, Vision & Mission Section End -->
+
+
+
+  
 
     
 
@@ -578,7 +554,7 @@
     </div>
     <div class="container-fluid bg-dark text-secondary p-5">
         <div class="row g-5">
-            <div class="col-lg-3 col-md-6">
+            <!-- <div class="col-lg-3 col-md-6">
                 <h3 class="end-white-text mb-4">Quick Links</h3>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Home</a>
@@ -587,22 +563,21 @@
                     <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Latest Blog Post</a>
                     <a class="text-secondary" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Contact Us</a>
                 </div>
-            </div>
+            </div> -->
             <div class="col-lg-3 col-md-6">
                 <h3 class="end-white-text mb-4">Popular Links</h3>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow  me-2"></i>Home</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>About Us</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Our Services</a>
-                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Latest Blog Post</a>
-                    <a class="text-secondary" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Contact Us</a>
+                    <a class="text-secondary mb-2" href="about.html"><i class="bi bi-arrow-right end-white-arrow me-2"></i>About Us</a>
+                    <a class="text-secondary mb-2" href="service.html"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Our Services</a>
+                    <a class="text-secondary" href="contact.html"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Contact Us</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="end-white-text mb-4">Get In Touch</h3>
-                <p class="mb-2"><i class="bi bi-geo-alt end-white-arrow me-2"></i>123 Street, New York, USA</p>
-                <p class="mb-2"><i class="bi bi-envelope-open end-white-arrow me-2"></i>info@example.com</p>
-                <p class="mb-0"><i class="bi bi-telephone end-white-arrow me-2"></i>+012 345 67890</p>
+                <p class="mb-2"><i class="bi bi-geo-alt me-2"></i>Kochi, Kerala, India</p>
+                <p class="mb-0"><i class="bi bi-telephone me-2"></i>+91 903 776 2644</p>
+                 <p class="mb-0"><i class="bi bi-telephone me-2"></i>+91 884 898 6556</p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="end-white-text mb-4">Follow Us</h3>
@@ -616,8 +591,7 @@
         </div>
     </div>
     <div class="container-fluid bg-dark text-secondary text-center border-top py-4 px-5" style="border-color: rgba(256, 256, 256, .1) !important;">
-<p class="m-0">&copy; <a class="text-secondary border-bottom" href="#">StepUp Foundation</a>. All Rights Reserved. Designed by <a class="text-secondary border-bottom" href="https://htmlcodex.com">HTML Codex</a></p>
-    </div>
+ <p class="mb-0">&copy; 2025 Star Magnet. All Rights Reserved. Designed by <a href="https://htmlcodex.com" class="text-secondary">Stepx International</a></p>    </div>
     <!-- Footer End -->
 
 
