--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
         <a href="index.html" class="navbar-brand p-0">
             <h1 class="m-0 text-uppercase gradient-text">STAR MAGNET</h1>
-            <p class="m-0 text-uppercase gradient-subtext">A Stepex Initiative</p>
+            <p class="m-0 text-uppercase gradient-subtext">A Stepx International Pvt Ltd Initiative</p>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
