--- a/index.html
+++ b/index.html
@@ -513,12 +513,19 @@
           Jeena Johnson is a compassionate and dedicated healthcare professional with multidisciplinary training in psychology, behavioral therapy, and child development. With a strong foundation in nursing and mental health, she serves in a leadership capacity to support and transform the lives of children through education, therapy, and care.
         </p>
 
-        <h2 class="gradient-text mt-5 mb-3">🎯 Vision</h2>
+       <h2 class=" mt-5 mb-3">
+  <img src="img/Dart hitting center of target 3D icon.png" alt="icon" style="width: 40px; height: 40px; vertical-align: middle; margin-right: 8px;">
+  Vision
+</h2>
+
         <blockquote class="blockquote">
           <p class="mb-0">"To ignite the potential of 1 million students across the world by nurturing life skills, self-confidence, and purpose-driven thinking—empowering a generation to rise as emotionally strong, socially responsible, and future-ready leaders of tomorrow."</p>
         </blockquote>
 
-        <h2 class="gradient-text mt-5 mb-3">🛤️ Mission</h2>
+         <h2 class=" mt-5 mb-3">
+  <img src="img/logo3.png" alt="icon" style="width: 40px; height: 40px; vertical-align: middle; margin-right: 8px;">
+  Mission
+</h2>
         <ul>
           <li>To provide daily 30-minute transformational classes that focus on personal growth, emotional intelligence, academic mindset, and value-based life skills.</li>
           <li>To support students from Class 5 to 12 through age-appropriate, interactive, and practical learning experiences in Malayalam and English.</li>
